Sonar commit